#[=[

   BLIS
   An object-based framework for developing high-performance BLAS-like
   libraries.

   Copyright (C) 2020 - 2024, Advanced Micro Devices, Inc. All rights reserved.

   Redistribution and use in source and binary forms, with or without
   modification, are permitted provided that the following conditions are
   met:
    - Redistributions of source code must retain the above copyright
      notice, this list of conditions and the following disclaimer.
    - Redistributions in binary form must reproduce the above copyright
      notice, this list of conditions and the following disclaimer in the
      documentation and/or other materials provided with the distribution.
    - Neither the name(s) of the copyright holder(s) nor the names of its
      contributors may be used to endorse or promote products derived
      from this software without specific prior written permission.

   THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS
   "AS IS" AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT
   LIMITED TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR
   A PARTICULAR PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT
   HOLDER OR CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL,
   SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT
   LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE,
   DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY
   THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT
   (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE
   OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.

]=]

add_library(haswell_1m
     OBJECT
     ${CMAKE_CURRENT_SOURCE_DIR}/bli_packm_haswell_asm_c3xk.c
     ${CMAKE_CURRENT_SOURCE_DIR}/bli_packm_haswell_asm_c8xk.c
     ${CMAKE_CURRENT_SOURCE_DIR}/bli_packm_haswell_asm_d6xk.c
     ${CMAKE_CURRENT_SOURCE_DIR}/bli_packm_haswell_asm_d8xk.c
     ${CMAKE_CURRENT_SOURCE_DIR}/bli_packm_haswell_asm_s16xk.c
     ${CMAKE_CURRENT_SOURCE_DIR}/bli_packm_haswell_asm_s6xk.c
     ${CMAKE_CURRENT_SOURCE_DIR}/bli_packm_haswell_asm_z3xk.c
     ${CMAKE_CURRENT_SOURCE_DIR}/bli_packm_haswell_asm_z4xk.c
 )

target_compile_options(haswell_1m PRIVATE /arch:AVX2)
if(BUILD_SHARED_LIBS)
    target_compile_definitions(haswell_1m PUBLIC -DBLIS_IS_BUILDING_LIBRARY)
endif()
